fix(service-engine): align ports methods and jpa gateways